--- a/package.json
+++ b/package.json
@@ -1,31 +1,41 @@
 {
-  "name": "sedona",
+  "name": "site",
   "version": "0.1.0",
   "private": true,
-  "description": "Личный проект «Седона» от HTML Academy",
+  "description": "site",
   "devDependencies": {
-    "@htmlacademy/editorconfig-cli": "0.1.x",
-    "autoprefixer": "6.7.x",
-    "browser-sync": "2.18.8",
-    "css-mqpacker": "^5.0.1",
-    "del": "^2.2.2",
-    "gulp": "3.9.1",
+    "@htmlacademy/editorconfig-cli": "1.x",
+    "autoprefixer": "7.1.x",
+    "browser-sync": "2.18.x",
+    "del": "^3.0.0",
+    "gulp": "3.9.x",
     "gulp-csso": "^3.0.0",
-    "gulp-imagemin": "^3.2.0",
-    "gulp-plumber": "1.1.0",
-    "gulp-postcss": "6.2.0",
+    "gulp-imagemin": "^3.4.0",
+    "gulp-minify": "^1.0.0",
+    "gulp-plumber": "1.1.x",
+    "gulp-postcss": "7.0.x",
+    "gulp-posthtml": "^3.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "3.1.0",
-    "gulp-sequence": "^0.4.6",
-    "gulp-svgmin": "^1.2.3",
+    "gulp-sass": "3.1.x",
     "gulp-svgstore": "^6.1.0",
-    "pixel-glass": "^1.0.13"
+    "gulp-webp": "^2.3.0",
+    "posthtml-include": "^1.1.0",
+    "run-sequence": "^2.2.0",
+    "stylelint": "8.1.x",
+    "stylelint-config-htmlacademy": "0.1.x"
   },
   "scripts": {
-    "test": "editorconfig-cli",
+    "editorconfig": "editorconfig-cli",
+    "stylelint": "stylelint 'sass/**/*.scss' --syntax scss",
+    "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
     "start": "npm run build && gulp serve"
   },
+  "browserslist": [
+    "last 2 versions",
+    "IE 11",
+    "Firefox ESR"
+  ],
   "editorconfig-cli": [
     "*.html",
     "*.json",
@@ -35,6 +45,6 @@
     "sass/**/*.{sass,scss}"
   ],
   "engines": {
-    "node": "6.10"
+    "node": "8.2"
   }
 }
